Fix text-wrapping issue

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -1,6 +1,6 @@
 .root{
     -fx-font-size: 12pt;
-    -fx-font-family: "Sans Serif";
+    -fx-font-family: sans-serif;
     -fx-background: #d5d5d5;
 }
 
@@ -8,12 +8,4 @@
     -fx-background-color: #fff;
     -fx-background-radius: 10px;
     -fx-padding: 1em;
-}
-
-.chat-picture {
-    -fx-background-color: #fff;
-}
-
-.chat-picture-box {
-    -fx-padding: 0 .5em 0 .5em;
 }
